--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -1,7 +1,8 @@
 .cart{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    padding: 1em;
 }
 .cart h3{
     justify-content: center;
@@ -17,38 +18,3 @@
     background-color: rgba(29, 29, 29, 0.89);
     outline: none;
 }
-/*.sale {*/
-/*    display: grid;*/
-/*    grid-template-columns: repeat(4, 1fr);*/
-/*    grid-gap: 30px;*/
-/*    position: relative;*/
-/*    top: -340px;*/
-/*    width: 1180px;*/
-/*    left: 430px;*/
-/*}*/
-
-/*.sale img {*/
-/*    max-width: 100%;*/
-/*    height: 350px;*/
-/*}*/
-/*.component {*/
-/*    position: relative;*/
-/*    top: 200px;*/
-/*    left: 0px;*/
-/*}*/
-
-/*.product {*/
-/*    margin-top: 10px;*/
-/*    font-size: 14px;*/
-/*    letter-spacing: 1px;*/
-/*    font-weight: 500;*/
-/*}*/
-/*.size {*/
-/*    font-size: 12px;*/
-/*    color: #999999;*/
-/*}*/
-/*.price {*/
-/*    color: black;*/
-/*    font-size: 18px;*/
-/*    font-weight: 600;*/
-/*}*/
