--- a/src/Common/Carousel/Carousel.module.css
+++ b/src/Common/Carousel/Carousel.module.css
@@ -9,3 +9,9 @@
     background-color: rgba(29, 29, 29, 0.89);
     outline: none;
 }
+.transition img{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    border-style: none;
+}
