--- a/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
+++ b/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
@@ -1,63 +1,3 @@
-.main h3 {
-    position: relative;
-    top: -250px;
-    left: 430px;
-    font-size: 30px;
-}
-
-.main h3:before {
-    content: '';
-    position: absolute;
-    bottom: -5px;
-    top: 55px;
-    width: 200px;
-    height: 4px;
-    background: #000000;
-}
-
-.sale {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 30px;
-    position: relative;
-    top: -340px;
-    width: 1180px;
-    left: 430px;
-}
-
-.sale img {
-    max-width: 100%;
-    height: 350px;
-}
-
-.component {
-    position: relative;
-    top: 200px;
-    left: 0px;
-}
-
-.component button {
-    position: relative;
-    top: 20px;
-    left: 90px;
-    margin-bottom: 30px;
-    display: flex;
-}
-
-.product {
-    margin-top: 10px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    font-weight: 500;
-}
-
-.size {
-    font-size: 12px;
-    color: #999999;
-}
-
-.price {
-    color: black;
-    font-size: 18px;
-    font-weight: 600;
+.main{
+    grid-area:main;
 }
