--- a/src/Components/MainPage/MainPage.module.css
+++ b/src/Components/MainPage/MainPage.module.css
@@ -1,16 +1,12 @@
 .Maincontent{
     grid-area: maincontent;
     background-color: white;
-    background-position: center;
-    background-size: cover;
-    margin: 0 auto;
     display:grid;
     grid-template-areas:
             'header'
-            'upContent'
             'sale'
             'main';
-    grid-template-rows: 0.2fr 0.2fr 0.1fr auto;
+    grid-template-rows: 0.1fr 0.1fr auto;
   background-color:  white;
   
 }
