--- a/src/Common/Cart/Cart.module.css
+++ b/src/Common/Cart/Cart.module.css
@@ -1,28 +1,142 @@
-.container{
+.main{
     display: grid;
     grid-template-areas:
-    'Header'
-    'maincontent'
-    'footer';
-grid-template-rows: 0.2fr auto 0.2fr;
+    'header'
+    'maincontent';
+grid-template-rows: auto auto ;
 }
-.container h3{
-    grid-area:'Header';
-    margin: 150px;
+.header {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    margin:20px 0px 20px;
+}
+.header h3{
+    font-size: 32px;
+}
 
-
+.Content{
+    grid-area: maincontent;
+    
+}
+.mainContent{
+    display: grid;
+    grid-template-areas:
+    'mainContentUp'
+    'mainContentDown';
+grid-template-rows: auto auto ;
 }
 .product{
-    grid-area:'maincontent';
-    display: block;
+    grid-area: mainContentUp;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.stripe{
+    grid-area: mainContentDown;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+
+
+.increase{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px;
+    align-items: center;
     text-align: center;
-    letter-spacing: 1px;
+}
+.increase span{
+    font-size: 20px;
+    
+  
+}
+.increase button{
+    width: 26px;
+    height: 30px;
+    margin: 3px;
+    align-items: center;
+    text-align: center;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+a:hover{
+    color: #bf1650;
+    text-decoration: none;
+}
+
+.component img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+}
+
+.component {
+    width: 285px;
+    height: 350px;
+    margin: 50px;
+    margin-bottom:320px;
+    justify-content: center;
+    align-items: center;
+}
+.productId{
+      display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 18px;
+    font-family: 'Montserrat', sans-serif;
+     font-size: 19px;
+     font-weight: 540;
+     height: 50px;
+}
+.size{
+    display: flex;
+    justify-content: center;
 
 }
-.product p{
-   margin-top:20px ;
-    font-size: 20px;
+.size button{
+    margin: 3px;
+    border-radius: 3px;
+    
 }
+.size button:hover{
+    color: #bf1650;
+}
+.chosenSize{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+
+.price{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 19px;
+    font-weight: 400;
+    margin-top: 15px;
+}
+
+.noProduct {
+    grid-area: maincontent;
+}
+.noProduct p{
+text-align: center;
+font-size: 20px;
+margin: 30px;
+}
+
 
 
 
