--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
           'Header'
           'maincontent'
           'footer';
-  grid-template-rows: 0.2fr auto 0.8fr;
+  grid-template-rows: 0.2fr auto auto;
 background-color:  white;
 
 }
