--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,7 +9,7 @@
     grid-template-areas:
             'Logo HeaderMain Login ';
     grid-template-columns: 2fr 7fr 3.5fr ;
-    margin: 0;
+    margin: 0px 0px 20px;
     font-family: 'Popins', sans-serif;
     padding: 0;
     position: relative;
