--- a/src/Components/Woman/WomanMain.module.css
+++ b/src/Components/Woman/WomanMain.module.css
@@ -33,19 +33,31 @@ a:hover{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    margin: 0px 200px;
 }
 .component img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 3px;
+    max-width: 285px;
+    max-height: 350px;
+    transition: all 0.5s;
+    min-height: 350px;
 }
-
+.component img:hover {
+    transform: scale(1.05);
+}
+.image{
+    overflow: hidden;
+    max-width: 285px;
+    max-height: 350px;
+    
+}
 .component {
     max-width: 285px;
     max-height: 350px;
-    margin: 50px;
+    margin:  60px 10px;
     margin-bottom:220px;
     justify-content: center;
     align-items: center;
@@ -54,7 +66,7 @@ a:hover{
       display: flex;
     justify-content: center;
     text-align: center;
-    margin: 18px;
+    margin: 20px 3px 20px;
     font-family: 'Montserrat', sans-serif;
      font-size: 19px;
      font-weight: 540;
