--- a/src/Common/Cart/Cart.module.css
+++ b/src/Common/Cart/Cart.module.css
@@ -9,7 +9,7 @@ grid-template-rows: auto auto ;
     grid-area: header;
     display: flex;
     justify-content: center;
-    margin:30px 0px 20px;
+    margin:30px 0px 0px;
 }
 .header h3{
     font-size: 30px;
@@ -37,13 +37,53 @@ grid-template-rows: auto auto ;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 0px 300px;
+    
+}
+.component img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+    max-width: 285px;
+    max-height: 350px;
+    transition: all 0.5s;
+    min-height: 350px;
+}
+.component img:hover {
+    transform: scale(1.05);
+}
+.image{
+    overflow: hidden;
+    max-width: 285px;
+    max-height: 350px;
+    
+}
+.component {
+    max-width: 285px;
+    max-height: 350px;
+    margin:  100px 10px 0px;
+    margin-bottom:220px;
+    justify-content: center;
+    align-items: center;
+    
+}
+.productId{
+      display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 20px 3px 20px;
+    font-family: 'Montserrat', sans-serif;
+     font-size: 19px;
+     font-weight: 540;
+     height: 40px;
 }
 .stripe{
     grid-area: mainContentDown;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 70px;
 }
 
 
@@ -52,23 +92,29 @@ grid-template-rows: auto auto ;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 10px;
     align-items: center;
     text-align: center;
+    
 }
 .increase span{
     font-size: 20px;
     
-  
 }
 .increase button{
     width: 26px;
     height: 30px;
-    margin: 3px;
+    margin: 3 3px;
     align-items: center;
     text-align: center;
 }
 
+.removeFromCart{
+    margin-left: 4px;
+}
+.removeFromCart button:hover{
+    background-color: red;
+    color: white;
+}
 a{
     color: black;
     text-decoration: none;
@@ -78,48 +124,25 @@ a:hover{
     text-decoration: none;
 }
 
-.component img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 3px;
-}
 
-.component {
-    width: 285px;
-    height: 350px;
-    margin: 50px;
-    margin-bottom:320px;
-    justify-content: center;
-    align-items: center;
-}
-.productId{
-      display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 18px;
-    font-family: 'Montserrat', sans-serif;
-     font-size: 19px;
-     font-weight: 540;
-     height: 50px;
-}
 .size{
     display: flex;
     justify-content: center;
 
 }
 .size button{
-    margin: 3px;
+    margin: 0px 3px;
     border-radius: 3px;
-    
+    background-color: white;
 }
 .size button:hover{
     color: #bf1650;
+    background-color: rgb(195, 192, 192);
 }
 .chosenSize{
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 10px;
     font-size: 18px;
     font-weight: 400;
 }
@@ -131,7 +154,7 @@ a:hover{
     text-align: center;
     font-size: 19px;
     font-weight: 400;
-    margin-top: 15px;
+    margin-top: 12px;
 }
 
 .noProduct {
