--- a/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
+++ b/src/Components/MainPage/Content/NewReleases/NewReleases.module.css
@@ -89,6 +89,7 @@ a:hover{
 }
 .size button:hover{
     color: #bf1650;
+    background-color: white;
 }
 
 
@@ -102,13 +103,35 @@ a:hover{
     margin-top: 15px;
 }
 
+.favorites{
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    top:-424px;
+    left: 250px;
+    display: flex;
+    width: 31px;
+    height: 31px;
+    border-radius:15px;
+    background-color: white;
 
+}
+.favorites span:active{
+    color: red;
+    transition: 0s;
+}
+.favorites span:hover{
+    color: red;
+    transition: 0s;
+}
 
 .addToCart {
     display: flex;
     justify-content: center;
     width: 100%;
 }
+
+
 .addToCart button{
     margin-bottom: 400px;
 }
