--- a/src/Components/Shoes/Shoes.module.css
+++ b/src/Components/Shoes/Shoes.module.css
@@ -84,6 +84,7 @@ a:hover{
 }
 .size button:hover{
     color: #bf1650;
+    background-color: white;
 }
 
 
@@ -103,6 +104,29 @@ a:hover{
     display: flex;
     justify-content: center;
 }
+.favorites{
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    top:-424px;
+    left: 250px;
+    display: flex;
+    width: 31px;
+    height: 31px;
+    border-radius:15px;
+    background-color: white;
+
+}
+.favorites span:active{
+    color: red;
+    transition: 0s;
+}
+.favorites span:hover{
+    color: red;
+    transition: 0s;
+}
+
+
 
   span button{
     display: flex;
