--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -16,7 +16,8 @@
 
 
 }
-.Header a:hover {
+
+.Header a:hover { 
 
     color: #bf1650;
     /*#ec5990;*/
@@ -46,9 +47,9 @@
 }
 .HeaderMain{
     grid-area: HeaderMain;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
 .HeaderMain a{
@@ -62,17 +63,18 @@
 
 
 }
+.Login{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .Login a{
     color: black;
     text-decoration: none;
-    display: inline-block;
     letter-spacing: 2px;
-    text-indent: 2em;
+    text-indent: 1em;
     font-size: 20px;
     margin-top: 30px;
-
-
-
 }
 .cart{
     color: black;
@@ -92,4 +94,17 @@
 
 
 
+@media screen and (max-width: 600px) {
+    .Header {
+        width: 50%;
+        margin-bottom: 20px;
+}
+
+}
+@media screen and (max-width: 800px) {
+    .Header {
+        width: 70%;
+        margin-bottom: 20px;
+}
+}
 
