--- a/src/Components/MainPage/Content/SaleMain/Sale.module.css
+++ b/src/Components/MainPage/Content/SaleMain/Sale.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin:  0 200px;
 }
 a{
     color: black;
@@ -34,12 +35,7 @@ a:hover{
     grid-area: maincontent;
 
 }
-.product{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0px 200px;
-}
+
 .component img {
     width: 100%;
     height: 100%;
