--- a/src/Components/Shoes/shoesUpContent.module.css
+++ b/src/Components/Shoes/shoesUpContent.module.css
@@ -1,86 +1,113 @@
-.Content img{
-    position: absolute;
-    width: 1200px;
-    height: 600px;
-    left: 300px;
-    top: 250px;
 
-}
-.Content{
-    position: absolute;
-    width: 1680px;
-    height: 316px;
-    left: 0px;
-    top:60px;
-    background-color: white;
-    background-position: center;
-    background-size: cover;
-
+.Content {
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+    position: relative;
 }
 
-.Nike270{
-    position: absolute;
-    width: 700px;
-    height: 86px;
-    left: 110px;
-    top: 280px;
-
-    font-family: TradeGothic LT CondEighteen;
-    font-size: 72px;
-    line-height: 86px;
+.upImg {
     display: flex;
-    align-items: center;
-    text-transform: uppercase;
+    justify-content: center;
+    margin-top: 20px;
+}
 
+.nike270 {
+    position: absolute;
+    left: 108px;
+    top: 150px;
+    font-family: TradeGothic LT CondEighteen;
+    font-size: 52px;
+    text-transform: uppercase;
     color: #131212;
 }
-.TheNike{
+
+.theNike {
     position: absolute;
     width: 370px;
     height: 60px;
-    left: 116px;
-    top: 400px;
-
+    left: 110px;
+    top: 240px;
     font-family: Helvetica Neue;
     font-size: 20px;
-    line-height: 30px;
     color: #131212;
-
     opacity: 0.5;
 }
-.Mens{
-    position: absolute;
-    width: 200px;
-    height: 24px;
-    left: 116px;
-    top: 240px;
 
+.shoes {
+    position: absolute;
+    left: 110px;
+    top: 120px;
     font-family: TradeGothic LT CondEighteen;
     font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
     text-transform: uppercase;
+    color: #131212;
+}
 
-    color: #131212;
-}
-.Size h3{
+.color h3 {
     position: absolute;
-    left: 1480px;
-    top: 268px;
+    left: 1100px;
+    top: 120px;
     font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
     text-transform: uppercase;
     color: #131212;
 }
-.SelectSize{
-    width: 400px;
+
+.selectColor {
+    width: 200px;
     height: 140px;
-    background-color: #ffa600;
     position: relative;
-    top: 320px;
-    left: 1480px;
+    top: -310px;
+    left: 1100px;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
 }
+.gray{
+    background-color: rgb(182, 153, 74);
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+}
+
+.black{
+    background-color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+}
+.blue{
+    background-color: rgb(127, 127, 228);
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+}
+.yellow{
+    background-color: rgb(252, 206, 91);
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+}
+
+/* @media screen and (max-width: 400px) {
+    .Content img {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .Content img {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .Content img {
+        width:70%;
+    }
+}
+@media screen and (max-width: 1000px) {
+    .Content img {
+        width:80%;
+    }
+} */
