--- a/src/Components/Man/ManMain.module.css
+++ b/src/Components/Man/ManMain.module.css
@@ -3,6 +3,7 @@
     grid-template-areas: 'header' 'select' 'maincontent';
     grid-template-rows:auto auto auto;
     letter-spacing: 1px;
+    justify-content: center;
 }
 a{
     color: black;
@@ -15,8 +16,11 @@ a:hover{
 
 .upImage img {
     grid-area: header;
+    display: inline-block;
     width: 100%;
+
     margin-bottom: 50px;
+    
 }
 .select {
     grid-area: select;
@@ -105,24 +109,33 @@ a:hover{
 }
 .favorites{
     justify-content: center;
-    position: relative;
     align-items: center;
-    top:-424px;
-    left: 250px;
+    width: 30px;
+    height: 30px;
     display: flex;
-    width: 31px;
-    height: 31px;
+     margin: -430px 240px 400px;
+}
+.favorite{
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 30px;
+    height: 30px;
     border-radius:15px;
     background-color: white;
-
+    
 }
-.favorites span:active{
+.favorite:active{
     color: red;
     transition: 0s;
+    z-index: 1;
 }
-.favorites span:hover{
+.favorite:hover{
+    
     color: red;
     transition: 0s;
+    z-index: 1;
 }
 
   span button{
