--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -8,7 +8,7 @@
     display:grid;
     grid-template-areas:
             'Logo HeaderMain Login ';
-    grid-template-columns: 2fr 6fr 3.5fr ;
+    grid-template-columns: 2fr 5.5fr 3.5fr ;
     margin: 0px 0px 20px;
     font-family: 'Popins', sans-serif;
     padding: 0;
@@ -72,7 +72,7 @@
     color: black;
     text-decoration: none;
     letter-spacing: 2px;
-    text-indent: 1em;
+    text-indent: 2em;
     font-size: 20px;
     margin-top: 30px;
 }
@@ -80,16 +80,13 @@
     color: black;
     text-decoration: none;
     display: inline-block;
-    letter-spacing: 2px;
-    text-indent: 2em;
     font-size: 20px;
     margin-top: 30px;
     margin-left: 10px;
-
 }
 .cartLength{
     display: inline-block;
-
+    text-indent: 1em;
 }
 
 
@@ -98,13 +95,22 @@
     .Header {
         width: 50%;
         margin-bottom: 20px;
+        grid-template-columns: 2fr 2fr 2fr ;
+}
+.Header a{
+    font-size: 8px;
 }
 
+
 }
+
 @media screen and (max-width: 800px) {
     .Header {
         width: 70%;
         margin-bottom: 20px;
+        grid-template-columns: 3.5fr 3.4fr 2fr ;
+}
+.Header a{
+    font-size: 14px;
 }
 }
-
