--- a/src/Components/MainPage/Content/SaleMain/Sale.module.css
+++ b/src/Components/MainPage/Content/SaleMain/Sale.module.css
@@ -116,24 +116,33 @@ a:hover{
 }
 .favorites{
     justify-content: center;
-    position: relative;
     align-items: center;
-    top:-424px;
-    left: 250px;
+    width: 30px;
+    height: 30px;
     display: flex;
-    width: 31px;
-    height: 31px;
+     margin: -430px 240px 400px;
+}
+.favorite{
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 30px;
+    height: 30px;
     border-radius:15px;
     background-color: white;
-
+    
 }
-.favorites span:active{
+.favorite:active{
     color: red;
     transition: 0s;
+    z-index: 1;
 }
-.favorites span:hover{
+.favorite:hover{
+    
     color: red;
     transition: 0s;
+    z-index: 1;
 }
 
   span button{
