--- a/src/Components/Shoes/shoesUpContent.module.css
+++ b/src/Components/Shoes/shoesUpContent.module.css
@@ -1,54 +1,24 @@
-
 .Content {
     width: 100%;
     height: 100%;
-    display: block;
+    display: grid;
+    grid-template-areas: 'mainContent color ';
+    grid-template-columns: auto auto;
     overflow: hidden;
-    position: relative;
-}
-
-.upImg {
-    display: flex;
+    margin-bottom: 300px;
     justify-content: center;
-    margin-top: 20px;
 }
 
-.nike270 {
-    position: absolute;
-    left: 108px;
-    top: 150px;
-    font-family: TradeGothic LT CondEighteen;
-    font-size: 52px;
-    text-transform: uppercase;
-    color: #131212;
+.mainContent{
+    grid-area: mainContent;
 }
 
-.theNike {
-    position: absolute;
-    width: 370px;
-    height: 60px;
-    left: 110px;
-    top: 240px;
-    font-family: Helvetica Neue;
-    font-size: 20px;
-    color: #131212;
-    opacity: 0.5;
-}
-
-.shoes {
-    position: absolute;
-    left: 110px;
-    top: 120px;
-    font-family: TradeGothic LT CondEighteen;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #131212;
+/* .color {
+    grid-area: color;
+    margin: 50px 20px 0px;
 }
 
 .color h3 {
-    position: absolute;
-    left: 1100px;
-    top: 120px;
     font-size: 20px;
     text-transform: uppercase;
     color: #131212;
@@ -57,57 +27,36 @@
 .selectColor {
     width: 200px;
     height: 140px;
-    position: relative;
-    top: -310px;
-    left: 1100px;
     display: flex;
-    flex-wrap:wrap;
-    justify-content:space-between;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-.gray{
+
+.gray {
     background-color: rgb(182, 153, 74);
     width: 40px;
     height: 40px;
     border-radius: 50px;
 }
 
-.black{
+.black {
     background-color: black;
     width: 40px;
     height: 40px;
     border-radius: 50px;
 }
-.blue{
+
+.blue {
     background-color: rgb(127, 127, 228);
     width: 40px;
     height: 40px;
     border-radius: 50px;
 }
-.yellow{
+
+.yellow {
     background-color: rgb(252, 206, 91);
     width: 40px;
     height: 40px;
     border-radius: 50px;
-}
-
-/* @media screen and (max-width: 400px) {
-    .Content img {
-        width: 30%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .Content img {
-        width: 50%;
-    }
-}
-@media screen and (max-width: 800px) {
-    .Content img {
-        width:70%;
-    }
-}
-@media screen and (max-width: 1000px) {
-    .Content img {
-        width:80%;
-    }
 } */
+
