--- a/src/Components/MainPage/Content/Product/Product.module.css
+++ b/src/Components/MainPage/Content/Product/Product.module.css
@@ -1,89 +1,102 @@
-
-a{
-    color: black;
-    text-decoration: none;
-}
-a:hover{
-    color: #bf1650;
-    text-decoration: none;
+.component {
+    display: grid;
+    grid-template-areas: 'mainContent' 'specification';
+    grid-template-rows: auto auto;
+    justify-content: center;
 }
 
-.header {
-    grid-area: header;
+.specification {
+    grid-area: specification;
+}
+
+.mainContent {
+    grid-area: mainContent;
     display: flex;
     justify-content: center;
-    margin: 20px;
-}
-.header h3{
-    font-size: 34px;
+    margin-top: 50px;
 }
 
-.maincontent {
-    grid-area: maincontent;
+.rightContent {
+    justify-content: center;
+    margin-left: 50px;
+    max-width: 40%;
+}
 
+.image {
+    overflow: hidden;
+    max-width: 285px;
+    max-height: 350px;
+    margin-left: 100px;
 }
 
 .component img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
     border-radius: 3px;
     max-width: 285px;
     max-height: 350px;
     transition: all 0.5s;
-   
 }
+
 .component img:hover {
     transform: scale(1.05);
 }
-.image{
-    overflow: hidden;
-    max-width: 285px;
-    max-height: 350px;
-    
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin-bottom: 15px;
 }
-.component {
-    max-width: 285px;
-    max-height: 350px;
-    margin:  60px 10px;
-    margin-bottom:220px;
+
+.productId {
+    margin: 0;
+    font-family:  'Ubuntu', sans-serif;
+    font-size: 34px;
+    font-weight: 300;
+}
+
+.favorites {
     justify-content: center;
     align-items: center;
-}
-.productId{
-      display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 20px 3px 20px;
-    font-family: 'Montserrat', sans-serif;
-     font-size: 19px;
-     font-weight: 540;
-     height: 50px;
-}
-.size{
+    width: 30px;
+    height: 30px;
     display: flex;
-    justify-content: center;
-
-}
-.size button{
-
-    border-radius: 3px;
-    margin: 3px;
-}
-.size button:hover{
-    color: #bf1650;
-    background-color: white;
+    margin: 11px 0 0 30px;
 }
 
+.favorite:active {
+    color: red;
+    transition: 0s;
+    z-index: 1;
+}
 
-.price{
+.favorite:hover {
+    color: red;
+    transition: 0s;
+    z-index: 1;
+}
+.category{
+    position: relative;
+    color: #999;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    margin-bottom: 25px;
+}
+
+
+
+.price {
     display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 19px;
-    font-weight: 400;
-    margin-top: 15px;
-    margin-bottom: 20px;
+    font-size: 20px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+    color: red;
+    margin: 0px 0;
+}
+
+.price p {
+    color: black;
 }
 
 .price span {
@@ -92,46 +105,63 @@ a:hover{
     color: #999999;
     text-decoration: line-through;
 }
+.bonuses{
+    position: relative;
+    color: #999;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    margin: 10px 0 20px;
+}
+.sizeTitle{
+  font-size: 13px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+}
+.size {
+    display: flex;
+}
+
+.size button {
+    border-radius: 3px;
+    margin: 3px;
+    background: transparent;
+    outline: none;
+    border: none;
+}
+
+.size button:hover {
+    color: #bf1650;
+    background-color: #eaeaead2;
+}
+
+
+.chosenSize {
+    display: flex;
+    margin: 5px 0 20px;
+}
+.chosenSize p {
+    font-size: 13px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+}
+.chosenSize span {
+   margin: -3.7px 4px;
+}
+
 
 
 
 
 .addToCart {
     display: flex;
-    justify-content: center;
-}
-.favorites{
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    display: flex;
-     margin: -430px 240px 400px;
-}
-.favorite{
-    z-index: 1;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 30px;
-    height: 30px;
-    border-radius:15px;
-    background-color: white;
-    
-}
-.favorite:active{
-    color: red;
-    transition: 0s;
-    z-index: 1;
-}
-.favorite:hover{
-    
-    color: red;
-    transition: 0s;
-    z-index: 1;
 }
 
-  span button{
+span button  {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -144,34 +174,4 @@ a:hover{
     transform: translateZ(-25px);
     transition: transform .25s;
     font-family: 'Montserrat', sans-serif;
-    
-  }
-  span button:before,
-  span button:after{
-    position: absolute;
-    content: "Add to Cart";
-    height: 40px;
-    width: 130px;
-    display: flex;
-    top:-2px;
-    align-items: center;
-    justify-content: center;
-    border: 3px solid black;
-    box-sizing: border-box;
-    border-radius: 5px;
-  }
-  span button:before{
-    color: #fff;
-    background: #000;
-    transform: rotateY(0deg) translateZ(25px);
-  }
-  span button:after{
-    color: #000;
-    transform: rotateX(90deg) translateZ(25px);
-  }
-  span button:hover{
-      
-    transform: translateZ(-25px) rotateX(-90deg);
-  }
-  
-  
+}
