--- a/src/Components/Shoes/Shoes.module.css
+++ b/src/Components/Shoes/Shoes.module.css
@@ -103,11 +103,11 @@ a:hover{
     border-radius: 3px;
     
 }
-.size button:hover{
+.size button:hover {
     color: #bf1650;
-    background-color: white;
-}
-
+    background-color: #eaeaead2;
+  }
+  
 
 
 .price{
