--- a/src/Common/Cart/Cart.module.css
+++ b/src/Common/Cart/Cart.module.css
@@ -94,11 +94,13 @@ grid-template-rows: auto auto ;
     justify-content: center;
     align-items: center;
     text-align: center;
-    
+}
+.increase p{
+    font-size: 28px;
+    margin-top:-8px;
 }
 .increase span{
-    font-size: 20px;
-    
+    font-size: 25px;
 }
 .increase button{
     width: 26px;
@@ -106,6 +108,7 @@ grid-template-rows: auto auto ;
     margin: 3 3px;
     align-items: center;
     text-align: center;
+    font-size: 20px;
 }
 
 .removeFromCart{
@@ -124,7 +127,6 @@ a:hover{
     text-decoration: none;
 }
 
-
 .size{
     display: flex;
     justify-content: center;
@@ -133,11 +135,11 @@ a:hover{
 .size button{
     margin: 0px 3px;
     border-radius: 3px;
-
+    background-color: white;
 }
 .size button:hover{
     color: #bf1650;
-    background-color: white;
+    background-color: rgb(230, 230, 230);
 }
 .chosenSize{
     display: flex;
@@ -214,6 +216,36 @@ margin: 30px;
   }
   
   
+.favorites{
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    display: flex;
+     margin: -420px 240px 400px;
+}
+.favorite{
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 30px;
+    height: 30px;
+    border-radius:15px;
+    background-color: white;
+    
+}
+.favorite:active{
+    color: red;
+    transition: 0s;
+    z-index: 1;
+}
+.favorite:hover{
+    
+    color: red;
+    transition: 0s;
+    z-index: 1;
+}
 
 
 
