--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -130,7 +130,30 @@
 
 @media screen and (max-width: 800px) {
     .Header {
-        grid-template-columns: 1fr 3fr 4fr ;
+        width: 96%;
+        grid-template-columns:auto ;
+        margin-bottom: 20px;
+
+}
+.Header a{
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-indent: 1em;
+    margin-top: 20px;
+}
+.logo a{
+    font-size: 16px;
+}
+.logo{
+    margin-top: 0px;
+    margin-left: 20px;
+}
+
+}
+@media screen and (max-width: 700px) {
+    .Header {
+        width: 88%;
+        grid-template-columns: auto ;
         margin-bottom: 20px;
 
 }
