--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -94,9 +94,8 @@
 
 }
 .Header a{
-   
     letter-spacing: 2px;
-    text-indent: 2em;
+    text-indent: 1.8em;
     margin-top: 18px;
 }
 .logo a{
@@ -104,6 +103,7 @@
 }
 .logo{
     margin-top: 6px;
+    margin-left: 18px;
 }
 
 }
@@ -116,6 +116,7 @@
 .Header a{
     font-size: 16px;
     letter-spacing: 2px;
+    text-indent: 1.5em;
     margin-top: 16px;
 }
 .logo a{
@@ -123,6 +124,7 @@
 }
 .logo{
     margin-top: 0px;
+    margin-left: 15px;
 }
 
 
@@ -136,7 +138,7 @@
 
 }
 .Header a{
-    font-size: 12px;
+    font-size: 16px;
     letter-spacing: 2px;
     text-indent: 1em;
     margin-top: 20px;
@@ -152,15 +154,56 @@
 }
 @media screen and (max-width: 700px) {
     .Header {
-        width: 88%;
-        grid-template-columns: auto ;
+        width: 94%;
+        grid-template-columns: 1fr auto ;
         margin-bottom: 20px;
 
 }
 .Header a{
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 2px;
-    text-indent: 1em;
+    text-indent: 1.3em;
+    margin-top: 19px;
+}
+.logo a{
+    font-size: 16px;
+}
+.logo{
+    margin-top: 0px;
+    margin-left: 16px;
+}
+
+}
+@media screen and (max-width: 600px) {
+    .Header {
+        width: 96%;
+        grid-template-columns: 1fr auto ;
+        margin-bottom: 20px;
+
+}
+.Header a{
+    font-size: 15px;
+    margin-top: 17px;
+    text-indent: 1.1em;
+}
+.logo a{
+    font-size: 16px;
+}
+.logo{
+    margin-top: 0px;
+    margin-left: 20px;
+}
+
+}
+@media screen and (max-width: 500px) {
+    .Header {
+        width: 96%;
+        grid-template-columns:1fr auto  ;
+        margin-bottom: 20px;
+
+}
+.Header a{
+    font-size: 14px;
     margin-top: 20px;
 }
 .logo a{
@@ -172,82 +215,42 @@
 }
 
 }
-@media screen and (max-width: 600px) {
-    .Header {
-        width: 80%;
-        grid-template-columns: 1fr 3fr 3fr ;
-        margin-bottom: 20px;
-
-}
-.Header a{
-    font-size: 10px;
-    margin-top: 23px;
-}
-.logo a{
-    font-size: 14px;
-}
-.logo{
-    margin-top: 0px;
-    margin-left: 20px;
-}
-
-}
-@media screen and (max-width: 500px) {
-    .Header {
-        width: 70%;
-        grid-template-columns: auto 3fr 3fr ;
-        margin-bottom: 20px;
-
-}
-.Header a{
-    font-size: 8px;
-    margin-top: 20px;
-}
-.logo a{
-    font-size: 12px;
-}
-.logo{
-    margin-top: -5px;
-    margin-left: 10px;
-}
-
-}
 @media screen and (max-width: 400px) {
     .Header {
-        width: 55%;
+        width: 100%;
         grid-template-columns: 1fr 3.5fr 4fr;
         margin-bottom: 20px;
 
 }
 .Header a{
-    font-size: 7px;
-    margin-top: 17px;
+    font-size: 14px;
+    margin-top: 18px;
 }
 .logo a{
-    font-size: 10px;
+    font-size: 15px;
 }
 .logo{
-    margin-top: -10px;
-    margin-left: 5px;
+    margin-top: 0px;
+    margin-left: 15px;
 }
 
 }
 @media screen and (max-width: 300px) {
     .Header {
-        width: 50%;
+        width: 100%;
         grid-template-columns: auto;
         margin-bottom: 20px;
 
 }
 .Header a{
-    font-size: 5px;
+    font-size: 14px;
     margin-top: 19px;
 }
 .logo a{
-    font-size: 7px;
+    font-size: 15px;
 }
 .logo{
-    margin-left: 3px;
+    margin-left: 15px;
 }
 
 }
