--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
 .Footer {
     grid-area: footer;
     margin-top: 100px;
-    padding: 30px 180px;
+    padding: 30px 20px;
     font-family: 'Popins', sans-serif;
     background: #22242A;
     color: #fff;
@@ -20,7 +20,7 @@
 }
 
 .AboutUs {
-    margin-right: 30px;
+    margin: 0 auto;
     width: 40%;
 
 }
@@ -104,10 +104,7 @@
 
 }
 .Contact{
-    position: relative;
     width: 25%;
-
-
 }
 .Contact h3:before {
     content: '';
@@ -124,16 +121,90 @@
     margin-bottom: 10px;
     display: flex;
     list-style: none;
-
-
 }
 
 .Contact  a:hover{
     color: #fff;
-
 }
 .CopyrightText{
     width: 100%;
     text-align: center;
     color: #999;
+}
+@media screen and (max-width: 1000px) {
+    .Footer {
+       font-size: 16px;
+    }
+    .Container h3 {
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .Footer {
+       font-size: 14px;
+    }
+    .Container h3 {
+        font-size: 16px;
+    }
+    .Contact {
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .Footer {
+       font-size: 14px;
+    }
+    .Container h3 {
+        font-size: 16px;
+    }
+    .Footer h3:before {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 80px;
+        height: 2px;
+        background: #f00;
+    }
+}
+@media screen and (max-width: 500px) {
+    .Footer {
+       font-size: 10px;
+    }
+    .Container h3 {
+        font-size: 14px;
+    }
+    .Footer h3:before {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 80px;
+        height: 2px;
+        background: #f00;
+    }
+    .Contact {
+        font-size: 7px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .Footer {
+       font-size: 8px;
+    }
+    .Container h3 {
+        font-size: 10px;
+    }
+    .Footer h3:before {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 60px;
+        height: 2px;
+        background: #f00;
+    }
+    .Contact {
+        font-size: 6px;
+    }
 }
