--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -140,7 +140,7 @@
     font-size: 16px;
     letter-spacing: 2px;
     text-indent: 1em;
-    margin-top: 20px;
+    margin-top: 18px;
 }
 .logo a{
     font-size: 16px;
@@ -196,60 +196,60 @@
 }
 @media screen and (max-width: 500px) {
     .Header {
-        width: 96%;
-        grid-template-columns:1fr auto  ;
+        width: 98%;
+        grid-template-columns: auto  ;
         margin-bottom: 20px;
 
 }
 .Header a{
-    font-size: 14px;
+    font-size: 9px;
     margin-top: 20px;
 }
 .logo a{
-    font-size: 16px;
+    font-size: 10px;
 }
 .logo{
-    margin-top: 0px;
-    margin-left: 20px;
+    margin-top: -5px;
+    margin-left: 10px;
 }
 
 }
 @media screen and (max-width: 400px) {
     .Header {
-        width: 100%;
-        grid-template-columns: 1fr 3.5fr 4fr;
-        margin-bottom: 20px;
-
-}
-.Header a{
-    font-size: 14px;
-    margin-top: 18px;
-}
-.logo a{
-    font-size: 15px;
-}
-.logo{
-    margin-top: 0px;
-    margin-left: 15px;
-}
-
-}
-@media screen and (max-width: 300px) {
-    .Header {
-        width: 100%;
+        width: 99%;
         grid-template-columns: auto;
         margin-bottom: 20px;
 
 }
 .Header a{
-    font-size: 14px;
+    font-size: 8px;
+    margin-top: 18px;
+}
+.logo a{
+    font-size: 10px;
+}
+.logo{
+    margin-top: -8px;
+    margin-left: 5px;
+}
+
+}
+@media screen and (max-width: 300px) {
+    .Header {
+        width: 98%;
+        grid-template-columns: auto;
+        margin-bottom: 20px;
+
+}
+.Header a{
+    font-size: 8px;
     margin-top: 19px;
 }
 .logo a{
-    font-size: 15px;
+    font-size: 10px;
 }
 .logo{
-    margin-left: 15px;
+    margin-left: 2px;
 }
 
 }
