--- a/src/Components/Woman/WomanMain.module.css
+++ b/src/Components/Woman/WomanMain.module.css
@@ -23,8 +23,8 @@ a:hover{
     grid-area: select;
     display: flex;
     justify-content: center;
-    margin: 20px;
 }
+
 
 .maincontent {
     grid-area: maincontent;
@@ -179,4 +179,10 @@ a:hover{
     transform: translateZ(-25px) rotateX(-90deg);
   }
   
-  
+  @media screen and (max-width: 800px) {
+    .select {
+        grid-area: select;
+        display: block;
+        margin: 0 auto;
+    }
+}
